_sass/_homepage.scss
nav {
	font-weight: $bold-font-weight;
	position: absolute;
	width: 100%;
	transition: .1s linear background, .1s linear border-bottom;
	ul {
		padding: 1em 0;
		margin: 0;
		text-align: center;
	}
	li {
		display: inline;
		font-size: 2.5em;
		line-height: 1;
		&:after {
			content: ' ● ';
			color: $white-color;
			padding: 0 0.5em;
		}
		&:last-child:after {
			display: none;
		}
	}
	a, a:visited {
		color: $white-color;
		&:hover {
			color: $white-color;
		}
	}
	&.nav-float {
		position: fixed;
		background: $black-color;
		border-bottom: 2px solid $white-color;
	}
}

h1.title {
	padding-top: 4em;
}

.section {
	background-position: center center;
	background-size: cover;

	.block {
		max-width: 90%;
		margin: 0 auto;
		padding: 3rem 0;
		font-size: 1.2em;

		p, h1, h2, h3, h4, h5, h6, .hoah-map {
			max-width: 680px;
			margin-left: auto;
			margin-right: auto;
		}

		h1, h2 {
			max-width: 960px;
			text-align: center;
		}
	}

	.block-white {
		color: $white-color;
	}

	.subtile {
		background: rgba(255, 255, 255, 0.5);
	}
}

.section-type-white {
	background: $white-color;
}

.section-type-black {
	background: $black-color;
	color: $white-color;
	a:hover {
		color: $white-color;
	}
}

.section-type-autoheight {
	height: 200px;
	height: 70vh;
}

.open-doors-medley {
	margin-bottom: 1em;
}

.no-audio .open-doors-medley {
	display: none;
}

.ymom-video {
	display: block;
	margin: 0 auto;
	border: 5px solid $white-color;
}

.events {
	.quick {
		width: 30%;
		max-width: 220px;
	}
	ul {
		list-style: none;
	}
	.date, h3 {
		font-size: 1.56em;
		line-height: 1;
	}
	.locationname {
		font-weight: $bold-font-weight;
		line-height: 1.7;
	}
	li {
		margin-bottom: 2.5em;
	}
	.location {
		background: $white-color;
		color: $black-color;
		max-width: 630px;
		padding: 20px;
		margin: 2em auto;
		border: 5px solid $black-color;
		span {
			display: block;
		}
	}
	.more {
		color: $brand-color;
		cursor: pointer;
		display: block;
		background: none;
		border: none;
		margin: 2.5em auto 0;
		font-family: $base-font-family;
		font-weight: $bold-font-weight;
		font-size: 2em;
		&:hover, &:focus {
			text-decoration: underline;
			&:after {
				text-decoration: none;
			}
		}
		&:after {
			display: block;
			content: '▾';
		}
	}
}

.hoah-map {
	display: block;
	width: 100%;
	height: 300px;
}

.logo-white {
	display: block;
	max-height: 16em;
	max-height: 80vh;
	margin: 0 auto;
}

.left {
	max-width: 50%;
	float: left;
	margin: 0 2.2em 1.1em 0;
}

.right {
	max-width: 50%;
	float: right;
	margin: 0 0 1.1em 2.2em;
}

.clear {
	display: block;
	clear: both;
}

.text-center {
	text-align: center;
}

.member {
	margin-top: 2em;
	margin-bottom: 0;
	width: 420px;
	max-width: 420px;
	height: 220px;

	.face {
		float: left;
		margin-right: 20px;
	}

	&.right {
		text-align: right;
		.face {
			float: right;
			margin-left: 20px;
			margin-right: 0;
		}
	}

	&.claus, &.hannes {
		h4 {
			padding-top: 50px;
		}
	}

	&.barbara {
		h4 {
			padding-top: 35px;
		}
	}

	&.rene {
		h4 {
			padding-top: 65px;
		}
	}

	&.for-small {
		display: none;
	}
}

img.cd {
	border-radius: 4px;
	padding: 0;
	box-shadow: -2px 2px 8px rgba(0, 0, 0, 0.3);
}

img.face {
	border-radius: 100%;
}

@media (min-height:38em) {
	nav li {
		font-size: 2.5em;
	}
}

@media (max-width: 1100px)  {
	nav li {
		font-size: 2em;
	}
}

@media (max-height:25em) {
	nav li {
		font-size: 1.5em;
	}
	.logo-white {
		max-height: 7em;
	}
}

@media (max-width: 720px) {
	nav li {
		font-size: 1.5em;
	}
	.member {
		display: none;
		&.for-small, &.for-both {
			width: 100%;
			max-width: 100%;
			margin: -30px 0 0;
			display: block;
			float: none;
		}
	}
	.events .quick {
		float: none;
		width: 100%;
		max-width: 100%;
	}
}

@media (max-width: 600px)  {
	nav li {
		font-size: 1em;
	}
}

